Update styles.css: fix spacing in top-navigation

--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ body {
   list-style: none;
   margin: 0;
   padding:0;
-  padding-right: 0.5em;
-  margin-left:1.3em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 #top-navigation > ul > li {
